--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Virtual keyboard</title>
 </head>
 <body>
-  <h1>Virtual keyboard</h1>
+  <div id="root"></div>
+<script src="./components/Button/index.js" type="module"></script>
+<script src="index.js" type="module"></script>
 </body>
 </html>
